--- a/socials/socials3.html
+++ b/socials/socials3.html
@@ -90,6 +90,22 @@
       background-color: #0e76a8;
     }
 
+    .github:hover,
+    .github::after {
+      background-color: #222222;
+    }
+
+    .pixiv:hover,
+    .pixiv::after {
+      background-color: #0096fa;
+    }
+
+    .udemy:hover,
+    .udemy::after {
+      background-color: #a435f0;
+    }
+    
+
     .twitter:hover,
     .twitter::after {
       background-color: #26a7de;
@@ -139,25 +155,6 @@
 
     <div class="wrapper">
 
-      <!-- Start blog Icon -->
-      <div id="blog" onclick="navigate(this.id)" class="fill  blog">
-        <span class="icon"><i class="fa-solid fa-blog"></i></span>
-      </div>
-      <!-- End blog Icon -->
-
-
-      <!-- Start email Icon -->
-      <div id="email" onclick="navigate(this.id)" class="fill email">
-        <span class="icon email"><i class="fa-solid fa-envelope"></i></span>
-      </div>
-      <!-- End email Icon -->
-
-
-      <!-- Start facebook Icon -->
-      <div id="facebook" onclick="navigate(this.id)" class="fill facebook">
-        <span class="icon"><i class="fab fa-facebook"></i></span>
-      </div>
-      <!-- End facebook Icon -->
 
 
       <!-- Start instagram Icon -->
@@ -173,45 +170,29 @@
       </div>
       <!-- End linkedin Icon -->
 
-
-      <!-- Start twitter Icon -->
-      <div id="twitter" onclick="navigate(this.id)" class="fill twitter">
-        <span class="icon"><i class="fab fa-twitter"></i></span>
+      <!-- Start github Icon -->
+      <div id="github" onclick="navigate(this.id)" class="fill github">
+        <span class="icon"><i class="fab fa-github"></i></span>
       </div>
-      <!-- End twitter Icon -->
+      <!-- End github Icon -->
 
-
-      <!-- Start reddit Icon -->
-      <div id="reddit" onclick="navigate(this.id)" class="fill reddit">
-        <span class="icon"><i class="fab fa-reddit"></i></span>
+      <!-- Start pixiv Icon -->
+      <div id="pixiv" onclick="navigate(this.id)" class="fill pixiv">
+        <span class="icon"><i class="fab fa-pinterest-p"></i></span>
       </div>
-      <!-- End reddit Icon -->
+      <!-- End pixiv Icon -->
 
-
-      <!-- Start tiktok Icon -->
-      <div id="tiktok" onclick="navigate(this.id)" class="fill tiktok">
-        <span class="icon"><i class="fab fa-tiktok"></i></span>
+      <!-- Start udemy Icon -->
+      <div id="pixiv" onclick="navigate(this.id)" class="fill udemy">
+        <span class="icon"><i class="fa fa-university"></i></span>
       </div>
-      <!-- End tiktok Icon -->
-
-      <!-- Start youtube Icon -->
-      <div id="youtube" onclick="navigate(this.id)" class="fill youtube">
-        <span class="icon"><i class="fab fa-youtube"></i></span>
-      </div>
-      <!-- End youtube Icon -->
-
-      <!-- Start pinterest Icon -->
-      <div id="pinterest" onclick="navigate(this.id)" class="fill pinterest">
-        <span class="icon"><i class="fab fa-pinterest"></i></span>
-      </div>
-      <!-- End pinterest Icon -->
+      <!-- End udemy Icon -->
 
 
-      <!-- Start telegram Icon -->
-      <div id="telegram" onclick="navigate(this.id)" class="fill telegram">
-        <span class="icon"><i class="fab fa-telegram"></i></span>
-      </div>
-      <!-- End telegram Icon -->
+
+
+
+      
 
 
     </div>
@@ -234,10 +215,10 @@
           window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("instagram.com", '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/ruwuru2701/", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
-          window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
+          window.open("https://www.linkedin.com/in/isuru-yahampath", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "twitter") {
           window.open("https://twitter.com/", '_blank').focus(); //Add the url to your pinterest account
@@ -256,6 +237,17 @@
         }
         else if (id === "telegram") {
           window.open("https://web.telegram.org/", '_blank').focus(); //Add the url to your telegram account
+        }
+        else if (id === "github") {
+          window.open("https://github.com/Isuru2701/", '_blank').focus(); //Add the url to your github
+        }
+
+        else if (id === "pixiv") {
+          window.open("https://www.pixiv.net/en/users/70978259", '_blank').focus(); //Add the url to your pixiv account
+        }
+
+        else if (id === "udemy") {
+          window.open("https://www.udemy.com/", '_blank').focus(); //Add the url to your udemy account
         }
       }
 
