--- a/minimal/minimal-calculator-basic.html
+++ b/minimal/minimal-calculator-basic.html
@@ -36,12 +36,12 @@ body {
 .calculator {
   
     display: inline-block;
-    background: white;
+    background: #000;
     margin: 1% 0;
     color: black;
-    border: 3px solid #000000;
+    border: 3px solid #fff;
     border-radius: 5px;
-    box-shadow: 2px 2px 1px 0px #000000;
+    box-shadow: 2px 2px 1px 0px #fff;
     max-width: 240px;
 
   
@@ -54,16 +54,16 @@ body {
     min-height: 2em;
     margin: 0.8%;
     border-radius: 15%;
-    border: 0.08em solid #000;
+    border: 0.08em solid #fff;
     font-family: monospace;
     background: white;
-    box-shadow: 0.03em  0.03em 0.01em 0px #000000;
+    box-shadow: 0.03em  0.03em 0.01em 0px #fff;
 
 
 }
 
 .calculator .accent{
-   background: #f3fff3;  background: #f3fff3;;
+   background: #000; color:#fff;;
 }
 
 .calculator .space {
@@ -73,8 +73,8 @@ body {
     min-height: 2.4em;
     margin: 0.5%;
     border-radius: 15%;
-    border: 0.08em solid #ffffff;
-    background: white;
+    border: 0.08em solid #000;
+    background: #000;
 
 
 }
@@ -82,8 +82,8 @@ body {
 
 .calculator button:hover,
 #backspace:hover {
-  background: #f3fff3;
-  color:#000000;
+  background: #000;
+  color:#fff;
   transform: scale(0.9);
   border-radius: 20%;
 
@@ -91,8 +91,8 @@ body {
 
 .calculator 
 #clear:hover , #rad:hover  ,#deg:hover{
-  background: rgb(0, 0, 0)!important;
-  color:#ffffff;
+  background: rgb(255, 255, 255)!important;
+  color:#000;
   transform: scale(0.9);
   border-radius: 20%;
 }
@@ -105,14 +105,14 @@ body {
 
 .button:active,
 .button-active {
-  background: rgb(0, 0, 0);
-  color:#ffffff;
+  background: rgb(255, 255, 255);
+  color:#000;
   transform: scale(0.8);
 }
 
  #screen{
 
-    border: 3px solid #000000;
+    border: 3px solid #fff;
     border-radius: 5px;
     width: 80%;
     height: 50px;
@@ -122,23 +122,23 @@ body {
     overflow-wrap: break-word;
     font-size: 30px;
     font-family: monospace;
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
 
 }
 
     
 #clean {
-  background: rgb(27, 27, 27);
-  color:#ffffff;
+  background: #fff;
+  color:#000;
 }
 #rad {
-  background: rgb(27, 27, 27);
-  color:#ffffff;
+  background: #fff;
+  color:#000;
 }
 #deg {
-  background: rgb(27, 27, 27);
-  color:#ffffff;
+  background: #fff;
+  color:#000;
 }
 
 .rows{
